src/serve/tests/requests/select/related/snapshots/basiliq__serve__tests__requests__select__related__sparse__sparse_other_single.snap
---
source: basiliq/src/serve/tests/requests/select/related/sparse.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "public__articles",
      "id": "fdf715dd-8772-498c-8196-6f4ccb64edef",
      "attributes": {
        "title": "How to dead"
      }
    },
    {
      "type": "public__articles",
      "id": "2dbf5d1a-b029-4456-af6b-339c75b1089c",
      "attributes": {
        "title": "Oh my g**"
      }
    }
  ]
}
